@@ -1,6 +1,7 @@
 CHANGES IN VERSION 1.1.12
 ------------------------
  o implement barplot for enrichResult <2012-03-18, Sun>
+ o bug fixed for setReadable method <2012-03-19, Mon>
 
 CHANGES IN VERSION 1.1.11
 ------------------------
